FFmpegThumbnailer

version 2.0.0
- Fixed some issues in package-config file (Thanks to ambrop7)
- C++ library has been put in a namespace
- C library functions have been renamed

version 1.5.6
- Fixed segmentation fault when seek in video file fails
- Command line option added to specify output format of the image regardless of the filename
- Fixed memory leak in MovieDecoder (thanks to Ulrich Völkel)

version 1.5.5
- Fixed build issue with certain versions of autoconf
- Fixed build issue with recent versions of gcc
- Fixed thumbnail generation for ogm files
- Fixed ffmpegthumbnailer hanging on certain filetypes caused by AVFMT_FLAG_GENPTS flag of video decoder

version 1.5.4
- Fixed support for large files

version 1.5.3
- Memory alignment fix causing segmentation in ffmpeg with altivec enabled

version 1.5.2
- Fixed soname version

version 1.5.1
- Optional compilation of jpeg and png support
- Fixed ffmpeg CFLAGS issue (causing compilation errors on Fedora)
- Fixed build error against latest ffmpeg (verified against ffmpeg revision 18769)
- Fixed missing include files for library usage (thanks to gustavo.boiko)

version 1.5.0
- Aspect ratio bug fix (Thanks to S. Eguchi)
- Support input files from stdin (will ignore seek time)
- Fixed build error against latest ffmpeg (verified against ffmpeg release 0.5)

version 1.4.0
- Filter support added that allows library users to implement filters that will be applied to the frame data
- Fixed compilation error with gcc 4.4

version 1.3.0
- Option added to ignore aspect ratio and generate square thumbnails
- Quality option added for jpeg thumbnails
- Man page added (thanks to Lionel Le Folgoc)
- Added option to seek to absolute time in stead of percentage

version 1.2.6
- Fixed seeking in large files due to integer overflow (Thanks to AWaters1)
- Fixed possible linker error (Thanks to pressh)

version 1.2.5
- Fixed crash when thumbnailing raw avi files

version 1.2.4