@@ -1,5 +1,8 @@
 FFmpegThumbnailer
 
+version 2.?.?
+- Setting the thumbnail size to 0 will use the original video size (thanks to John Fremlin)
+
 version 2.0.0
 - Fixed some issues in package-config file (Thanks to ambrop7)
 - C++ library has been put in a namespace
